--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -6,5 +6,8 @@
         <a class="project_link" href="#"><%= proj.name %></a>
       </div>
     <% end %>
+    <div class="proj">
+      <a href="#" id="new_project">New Project</a>
+    </div>
   </div>
 </div>
