--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,35 +1,41 @@
 <div class="unit header">
-<h1 id="title">Dashboard</h1>
+  <h1 id="title">Dashboard</h1>
 </div>
 
 <div class="unit body">
   <div class="columns on-3 same-height">
+    
     <div class="column fixed sidebar" style="width:200px;">
       <div class="container">
       <%= render 'developers/sidebar' %>
       <%= render 'shared/sidebar' %>
       </div>
     </div>
-    <div class="column content" id="github">
-      <table class="task_tracker">
-        <thead>
-          <th>Date</th>
-          <th>Commit</th>
-        </thead>
-        <tbody id="commits">
-        </tbody>
-      </table>
+    <div class="column span-2" id="main">
+      
+      <div class="columns">
+        <div class="column content" id="github">
+          <table class="task_tracker">
+            <thead>
+              <th>Commit</th>
+            </thead>
+            <tbody id="commits">
+            </tbody>
+          </table>
+        </div>
+      
+        <div class="column content" id="tracks">
+          <table class="task_tracker">
+            <thead>
+              <th>Task</th>
+            </thead>
+            <tbody id="tracker">
+            </tbody>
+          </table>
+        </div>
+      </div>
+      
     </div>
-    <div class="column content" id="tracks">
-      <table class="task_tracker">
-        <thead>
-          <th>Date</th>
-          <th>Status</th>
-          <th>Task</th>
-        </thead>
-        <tbody id="tracker">
-        </tbody>
-      </table>
-    </div>
+    
   </div>
 </div>
