Filter github commits per dev

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -15,8 +15,8 @@
         </div>
       </div>
     </div>
-    <div class="column span-2" id="repos">
-      Found repos
+    <div class="column span-2" style="margin-bottom:10px;">
+      <div id="repos" style="float:left;"><small>Current Projects</small></div>
     </div>
     <div class="column span-2" id="main">
       
