--- a/app/views/projects/_github_tracker.html.erb
+++ b/app/views/projects/_github_tracker.html.erb
@@ -3,7 +3,7 @@
     <th>Commits</th>
   </thead>
   <tbody id="commits">
-    <% for commit in @commits["commits"] %>
+    <% for commit in @commits %>
       <tr>
         <td class="commit"><%= commit["message"] %>
           <div class="commit_info">
