Filter tasks for user in a project

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -10,7 +10,7 @@
         <div id="devs_side">
           <%= render 'developers/sidebar' %>
         </div>
-        <div class="projs_side">
+        <div id="projs_side">
           <%= render 'projects/sidebar' %>
         </div>
       </div>
