--- a/app/views/projects/find.js.erb
+++ b/app/views/projects/find.js.erb
@@ -1,4 +1,5 @@
 $("#title").html('<%= escape_javascript @project.name %>');
+$("#repos").html("<small>Current Projects</small>");
 $("#main").html(
 '<div class="columns on-2">\
   <div class="column content" id="github">\
