--- a/app/views/projects/_sidebar.html.erb
+++ b/app/views/projects/_sidebar.html.erb
@@ -8,7 +8,7 @@
         </li>
       <% end %>
       <li class="proj">
-        <a href="#" class="new_element" id="new_project" name="projects">+ Add</a>
+        <a href="#" class="new_element" id="new_project" name="projects">+ Add new project</a>
       </li>
     </ul>
   </div>
