--- a/app/views/developers/_sidebar.html.erb
+++ b/app/views/developers/_sidebar.html.erb
@@ -1,6 +1,9 @@
 <div>
-  <h3>Developers</h3>
+  <h3><a href="<%= root_path %>" id="home">Developers</a></h3>
   <ul>
+    <li class="dev">
+      <a href="<%=root_path%>" >Back to all devs</a>
+    </li>
   <% @devs.each do |dev| %>
     <li class="dev">
       <%= gravatar_for dev, :size => 25 %>
@@ -8,7 +11,7 @@
     </li>
   <% end %>
     <li class="dev">
-      <a href="#" class="new_element" id="new_developer" name="developers">+ Add</a>
+      <a href="#" class="new_element" id="new_developer" name="developers">+ Add new developer</a>
     </li>
   </ul>
 </div>
