--- a/app/views/projects/_task_tracker.html.erb
+++ b/app/views/projects/_task_tracker.html.erb
@@ -1,5 +1,5 @@
 <% if @tickets.nil? || @tickets.empty? %>
-  <h3>No assign into Pivotal Tracker</h3>
+  <h3>There are no task assign.</h3>
 <% else %>
 <table class="task_tracker">
   <thead>
