--- a/app/views/projects/create.js.erb
+++ b/app/views/projects/create.js.erb
@@ -1,26 +1,6 @@
 <% if @saved %>
   $("#projs_side").html("<%= escape_javascript render :partial => 'sidebar', :object => @projects %>");
-  $("#main").html('<div class="columns">\
-    <div class="column content" id="github">\
-      <table class="task_tracker">\
-        <thead>\
-          <th>Commit</th>\
-        </thead>\
-        <tbody id="commits">\
-        </tbody>\
-      </table>\
-    </div>\
-    <div class="column content" id="tracks">\
-      <table class="task_tracker">\
-        <thead>\
-          <th>Task</th>\
-        </thead>\
-        <tbody id="tracker">\
-        </tbody>\
-      </table>\
-    </div>\
-  </div>\
-  ');
+  $("#main").html("<%= escape_javascript render :partial => 'shared/main' %>");
 <% else %>
   $("#main").html("<%= escape_javascript render :partial => 'project', :object => @project %>");
 <% end %>
