--- a/app/views/projects/find.js.erb
+++ b/app/views/projects/find.js.erb
@@ -10,3 +10,19 @@ $("#main").html(
     <%= escape_javascript render :partial => "task_tracker", :object => @tickets %>\
   </div>'
 );
+$("#devs_side").html('\
+<div>\
+  <h3><a href="<%= root_path %>" id="home">Developers</a></h3>\
+  <ul>\
+  <% @devs.each do |dev| %>\
+    <li class="dev">\
+      <%= gravatar_for dev, :size => 25 %>\
+      <a class="user_project_link" href="#" id="<%= @project.repo_name %>" name="<%=dev.id%>"><%= dev.user_github %></a>\
+    </li>\
+  <% end %>\
+    <li class="dev">\
+      <a href="#" class="new_element" id="new_developer" name="developers">+ Add new developer</a>\
+    </li>\
+  </ul>\
+</div>\
+');
