--- a/app/views/developers/new.js.erb
+++ b/app/views/developers/new.js.erb
@@ -1,1 +1,2 @@
-$("#main").html("<%= escape_javascript render :partial => @developer %>");
+$("#github").html("<h3>New Developer</h3><%= escape_javascript render :partial => @developer %>");
+$("#tracks").html("<%= escape_javascript render :partial => 'instructions' %>");
