--- a/app/views/developers/show.js.erb
+++ b/app/views/developers/show.js.erb
@@ -1,5 +1,5 @@
 $("#repos").html("");
-$("#repos").append('<small><li class="found_repo">Current Projects for: <%= @dev.user_github%></li></small>')
+$("#repos").append('<small><li class="found_repo">Select project to display info. Projects for: <%= @dev.github_login%></li></small>')
 <% @repos.each do |repo| %>
   $("#repos").append('<small><li class="found_repo">\
   <a href="#" class="user_project_link" id="<%= repo.repo_name %>" name="<%=@dev.id%>"><%= repo.name %></a>\
