--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= stylesheet_link_tag 'application' %>
     <%= javascript_include_tag 'elastic' %>
     <%= javascript_include_tag 'jquery' %>
-    
+    <%= javascript_include_tag 'jquery.ui' %>
     <%= javascript_include_tag 'projects' %>
   </head>
   <body>
