--- a/app/views/projects/new.js.erb
+++ b/app/views/projects/new.js.erb
@@ -1,1 +1,2 @@
-$("#main").html("<%= escape_javascript render :partial => @project %>");
+$("#github").html("<h3>New Project</h3><%= escape_javascript render :partial => @project %>");
+$("#tracks").html("<%= escape_javascript render :partial => 'instructions' %>");
