--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -1,20 +1,8 @@
 <div class="columns on-2">
   <div class="column content" id="github">
-    <table class="task_tracker">
-      <thead>
-        <th>Commit</th>
-      </thead>
-      <tbody id="commits">
-      </tbody>
-    </table>
+    <h3>Commit</h3>
   </div>
   <div class="column content" id="tracks">
-    <table class="task_tracker">
-      <thead>
-        <th>Task</th>
-      </thead>
-      <tbody id="tracker">
-      </tbody>
-    </table>
+    <h3>Task</h3>
   </div>
 </div>
