--- a/app/views/developers/_developer.html.erb
+++ b/app/views/developers/_developer.html.erb
@@ -1,17 +1,27 @@
-<h2>New developer</h2>
-
 <% form_for @developer, :html => {:class => "form_element"} do |f| %>
   <p>
-    <%= f.label :user_github, "Github user (login) :" %><br>
-    <%= f.text_field :user_github %> <%= error_message_on @developer, :user_github, :prepend_text => "*This field " %><br>
-  </p>
-  <p>
-    <%= f.label :name, 'Name* (must match in pivotal) :' %><br>
+    <%= f.label :name, 'Name' %><br>
     <%= f.text_field :name %> <%= error_message_on @developer, :name, :prepend_text => "*Email " %><br>
   </p>
   <p>
-    <%= f.label :email, 'Email :' %><br>
+    <%= f.label :email, 'Email' %><br>
     <%= f.text_field :email %> <%= error_message_on @developer, :email, :prepend_text => "*Email " %><br>
+  </p>
+  <p>
+    <%= f.label :github_login, 'Github login' %><br>
+    <%= f.text_field :github_login %> <%= error_message_on @developer, :github_login, :prepend_text => "*This field " %><br>
+  </p>
+  <p>
+    <%= f.label :github_token, "Github token" %><br>
+    <%= f.text_field :github_token %> <%= error_message_on @developer, :github_login, :prepend_text => "*This field " %><br>
+  </p>
+  <p>
+    <%= f.label :pivotal_login, "Pivotal login" %><br>
+    <%= f.text_field :pivotal_login %> <%= error_message_on @developer, :pivotal_login, :prepend_text => "*This field " %><br>
+  </p>
+  <p>
+    <%= f.label :pivotal_token, "Pivotal token" %><br>
+    <%= f.text_field :pivotal_token %> <%= error_message_on @developer, :pivotal_token, :prepend_text => "*This field " %><br>
   </p>
   <p>
     <%= f.submit 'Submit' %>
