--- a/app/views/developers/_sidebar.html.erb
+++ b/app/views/developers/_sidebar.html.erb
@@ -1,17 +1,13 @@
 <div>
-  <h3><a href="<%= root_path %>" id="home">Developers</a></h3>
-  <ul>
-    <li class="dev">
-      <a href="<%=root_path%>" >Back to all devs</a>
-    </li>
-  <% @devs.each do |dev| %>
-    <li class="dev">
-      <%= gravatar_for dev, :size => 25 %>
-      <a class="dev_link" href="#" id="<%=dev.id%>"> <%= dev.user_github %></a>
-    </li>
-  <% end %>
-    <li class="dev">
+    <li class="add_dev">
       <a href="#" class="new_element" id="new_developer" name="developers">+ Add new developer</a>
     </li>
+  <ul>
+  <% @devs.each do |dev| %>
+    <li class="dev dev_elem">
+      <%= gravatar_for dev, :size => 25 %>
+      <a class="dev_link" href="#" id="<%=dev.id%>"> <%= dev.github_login %></a>
+    </li>
+  <% end %>
   </ul>
 </div>
