--- a/app/views/developers/create.js.erb
+++ b/app/views/developers/create.js.erb
@@ -1,6 +1,7 @@
 <% if @saved %>
   $("#devs_side").html("<%= escape_javascript render :partial => 'sidebar', :object => @devs %>");
   $("#main").html("<%= escape_javascript render :partial => 'shared/main' %>");
+  $(".dev_elem").draggable({revert:"valid"});
 <% else %>
   $("#main").html("<%= escape_javascript render :partial => 'developer', :object => @developer %>");
 <% end %>
